src/test/ui/issue-23173.stderr
error[E0599]: no variant named `Homura` found for type `Token` in the current scope
  --> $DIR/issue-23173.rs:19:16
   |
11 | enum Token { LeftParen, RightParen, Plus, Minus, /* etc */ }
   | ---------- variant `Homura` not found here
...
19 |     use_token(&Token::Homura);
   |                ^^^^^^^^^^^^^ variant not found in `Token`

error[E0599]: no function or associated item named `method` found for type `Struct` in the current scope
  --> $DIR/issue-23173.rs:21:5
   |
12 | struct Struct {
   | ------------- function or associated item `method` not found for this
...
21 |     Struct::method();
   |     ^^^^^^^^^^^^^^ function or associated item not found in `Struct`

error[E0599]: no function or associated item named `method` found for type `Struct` in the current scope
  --> $DIR/issue-23173.rs:23:5
   |
12 | struct Struct {
   | ------------- function or associated item `method` not found for this
...
23 |     Struct::method;
   |     ^^^^^^^^^^^^^^ function or associated item not found in `Struct`

error[E0599]: no associated item named `Assoc` found for type `Struct` in the current scope
  --> $DIR/issue-23173.rs:25:5
   |
12 | struct Struct {
   | ------------- associated item `Assoc` not found for this
...
25 |     Struct::Assoc;
   |     ^^^^^^^^^^^^^ associated item not found in `Struct`

error: aborting due to 4 previous errors

